clusters/home-lab-kubernetes-01/argocd/namespaces/istio-system/ingress/fastgateway.zufardhiyaulhaq.com/fastgateway-zufardhiyaulhaq-com-authz.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: fastgateway-zufardhiyaulhaq-com-authz
  namespace: istio-system
spec:
  selector:
    matchLabels:
      app: istio-public-gateway
  action: ALLOW
  rules:
  - to:
    - operation:
        hosts:
        - fastgateway.zufardhiyaulhaq.com
